--- a/BillionsApp/GoogleService-Info.plist
+++ b/BillionsApp/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>{Please use your REVERSED_CLIENT_ID}</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAUTuvtp3gpxkc0sorNfNBrDaT-QErCBtI</string>
+	<string>{Please use your API_KEY}</string>
 	<key>GCM_SENDER_ID</key>
 	<string>{Please use your GCM_SENDER_ID}</string>
 	<key>PLIST_VERSION</key>
